# eval

./: .env.example  pyproject.toml  readme.md  run_eval.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommands.sh
agent/: graph.py  tools.py
datasets/: financial_qa.json
evals/: dataset.py  reporter.py  runner.py
evals/scorers/: exact.py  llm_judge.py
