[tool.poetry]
name = "agent-from-first-principles"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[[tool.poetry.source]]
name = "abb_artifacts"
url = "https://pkgs.dev.azure.com/abbiatyiap/_packaging/dias-platform-artifacts/pypi/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "<3.13, >3.10"
requests = "^2.32.3"
pyodbc = "^5.2.0"
cdifflib = "^1.2.9"
pandas = "^2.2.3"
jinja2 = "^3.1.4"
openai = "^1.61.1"
pydantic = "^2.10.6"
logging = "^0.4.9.6"
langchain = "1.2.10"
langchain-community = "^0.3.31"
langchain-openai = "^0.3.0"
langchain-classic = "1.0.1"
langgraph = "^1.0.8"
langgraph-prebuilt = ">=1.0.0,<=1.0.8"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
sqlalchemy = "^2.0.38"
pytest-asyncio = "^0.26.0"
responses = "^0.25.7"
matplotlib = "^3.10.3"
pyarrow = "^15.0.2"
numpy = ">=1.26.4,<2.0.0"
azure-storage-blob = "12.24.1"
tabulate = "^0.9.0"
scikit-learn = "^1.7.0"
openpyxl = "^3.1.2"
aiofiles = "^24.1.0"
yfinance = "^0.2.54"
curl-cffi = "^0.7"
sse-starlette = "^2.3.6"
streaming-form-data = "^1.19.1"
kaleido = "0.2.1"
duckdb = "^1.1.3"
dependency-injector = "4.46.0"
azure-search-documents = "^11.5.2"
opensearch-py = "^2.8.0"
svglib = "1.5.1"
astor = "^0.8.1"
python-multipart = "^0.0.20"
fastapi-utils = "^0.8.0"
uvicorn = "^0.32.1"
pymongo = "4.11.3"
celery = "^5.4.0"
redis = { version = "^5.2.1", extras = ["hiredis"] }
dias-genix-authentication = { version = "^3.2.4", source = "abb_artifacts" }
adal = "1.2.7"
PyJWT = "^2.8.0"
azure-identity = "^1.19.0"
azure-monitor-opentelemetry = "^1.8.6"
azure-monitor-opentelemetry-exporter = "^1.0.0b46"
opentelemetry-instrumentation-langchain = "^0.37.0"
opentelemetry-exporter-otlp = "^1.36.0"
plotly = "^5.24.1"
markdown = "3.8.2"
markdown2 = "^2.5.3"
secweb = "^1.11.0"
apscheduler = "^3.11.0"
fastapi = { version = "^0.118.0", optional = true }
weasyprint = "^66.0"
pillow = { version = "^11.1.0", optional = true }
unstructured = { extras = [
    "docx",
    "pptx",
], version = "^0.17.2", optional = true }
docx2txt = { version = "^0.9", optional = true }
azure-ai-documentintelligence = { version = "^1.0.2", optional = true }
office365-rest-python-client = { version = "^2.6.2", optional = true }
azure-monitor-query = { version = "^1.4.0", optional = true }
mlflow = { version = "^3.1.3", optional = true }
nltk = { version = "^3.9.1", optional = true }
transformers = { version = "^4.52.3", optional = true }
thefuzz = { version = "^0.22.0", optional = true }
sqlparse = { version = "^0.5.3", optional = true }
doc2txt = "^1.0.8"
opentelemetry-instrumentation-fastapi = { version = ">=0.46", optional = true }
langchain-mcp-adapters = { version = "^0.2.1", optional = true }
pytest-mock = "^3.14.0"
mongomock = "^4.3.0"
panel = "^1.5.5"
pytest-azurepipelines = "^1.0.5"
twine = "^6.1.0"
xhtml2pdf = "^0.2.17"
polars = "^1.38.1"
sqlglot = "^28.10.1"
langgraph-checkpoint-mongodb = "0.1.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.extras]
api = [
    "fastapi",
    "uvicorn",
    "Secweb",
    "apscheduler",
    "dias-genix-authentication",
    "weasyprint",
    "opentelemetry-instrumentation-fastapi",
]

worker = ["pillow", "langchain-mcp-adapters"]

indexer = [
    "uvicorn",
    "secweb",
    "dias-genix-authentication",
    "azure-storage-blob",
    "unstructured",
    "doc2txt",
    "azure-ai-documentintelligence",
    "office365-rest-python-client",
]

utilities = [
    "uvicorn",
    "azure-monitor-query",
    "secweb",
    "dias-genix-authentication",
    "mlflow",
    "openpyxl",
]

eval = ["mlflow", "nltk", "transformers", "thefuzz", "sqlparse"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
ipykernel = "^7.2.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "^4.0.1"
codespell = "^2.3.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "spikes",         # to be able to move faster
    "experiments",    # to be able to move faster
]

line-length = 100
indent-width = 4

# Python 3.11.x
target-version = "py311"

# Use short output
output-format = "concise"

[tool.ruff.lint]
# Rules https://beta.ruff.rs/docs/rules/
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
]

# Linting error codes to ignore
ignore = []

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,**/poetry.lock,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,templates,*.trig'

# comma separated list of words to ignore
ignore-words-list = 'ANUALLY,Anually'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
